--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <th>City</th>
                 <th>Gender</th>
                 <th>Hobby</th>
-                <th>Options</th>
+                <!-- <th class="options">Options</th> -->
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
         </table>
     </main>
