add search and select

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <h1>
             Itay's BootCamp Capsules
         </h1>
-        <table class="table-cont">
+        <div class="search-bar">
+            <input type="text" class="search" placeholder="Search...">
+            <select name="categories" id="dropdown"></select>
+        </div>
+        <table id="t1" class="table-cont">
             <tr>
                 <th>ID</th>
                 <th>First Name</th>
@@ -25,7 +29,6 @@
                 <th>City</th>
                 <th>Gender</th>
                 <th>Hobby</th>
-                <!-- <th class="options">Options</th> -->
                 <th>Edit</th>
                 <th>Delete</th>
             </tr>
